--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                             <i class="fab fa-whatsapp"></i>
                             <div class="info">
                                 <div class="head">Whatsapp</div>
-                                <div class="sub-title"><a href="https://api.whatsapp.com/send/?phone=918653802996&text&app_absent=0">+91 86538 02996</a></div>
+                                <div class="sub-title"><a href="https://api.whatsapp.com/send/?phone=918653802996&text="Hi%20I%20Would%20like%20to%20know%20more%20about%20the%20services%20you%20provide" target="_blank"">+91 86538 02996</a></div>
                             </div>
                         </div>
                         <div class="row">
